---------------------------------------------------------------------------------------------------
Version: 3.1.0
Date: 05. 03. 2019
  Changes:
    - added option to remove cliffs, requires cliff explosives (defaults to true)
    - added console commands to read and clear blueprints, create vertical and diagonal blueprints (you have to be in a FARL for them to work)
    - /farl_read_bp /farl_clear_bp /farl_vertical_bp /farl_diagonal_bp
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 05. 03. 2019
  Bugfixes:
    - fixed tiles being replaced with grass in maintenance mode
    - fixed error when creating/saving a scenario
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 27. 02. 2019
  Changes:
    - Updated for Factorio 0.17
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 04. 06. 2018
  Changes:
    - Added mod setting to make red and green wires placed by FARL free (defaults to false)
  Bugfixes:
    - Fixed Dectorio landscape tiles being picked up by FARL
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 08. 04. 2018
  Bugfixes:
    - Fixed parameter errors for on_built_tile event
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 26. 03. 2018
  Changes:
    - Added support for NiceFill mod when using "bridge water" option
    - Added option to disable the FARL module
  Bugfixes:
    - Fixed autopilot not working with ghost driver
    - Fixed wierd interaction between Alien Biomes, Dectorio and FARL. Only blueprintable tiles will be removed in maintenance mode
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 29. 01. 2018
  Bugfixes: