@@ -1,6 +1,6 @@
 {
   "name": "FARL",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "factorio_version": "0.17",
   "title": "Fully Automated Rail Layer",
   "author": "Choumiko",
